# medical-assays

./: .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  entrypoint.sh  example.env  loc.docker-compose.yml  manage.py  pyproject.toml  run_flower.sh  start_celery_worker.sh
locale/en/LC_MESSAGES/: django.mo  django.po
medical_analysis/: __init__.py  admin.py  api_urls.py  api_views.py  apps.py  context_processors.py  enums.py  file_processor.py  gpt_parser.py  image_preprocessor.py  language_views.py  models.py  ocr_engine.py  ocr_service.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py  web_views.py
medical_analysis/constants/: __init__.py  keywords_analysis.py  parameter_names.py  parameters.py  paraneter_parser.py  parsing.py  prompts.py  type_map.py  units.py
medical_analysis/middleware/: language_middleware.py
medical_analysis/migrations/: 0001_initial.py  0002_remove_bloodgeneralanalysis_medical_data_and_more.py  0003_alter_medicaldata_session.py  0004_medicaldata_is_confirmed_medicaldata_laboratory_and_more.py  0005_alter_analysissession_processing_status.py  0006_parsersettings.py  0007_alter_medicaldata_laboratory_subscription.py  0008_alter_subscription_created_at_and_more.py
medical_analysis/utils/: core.py  i18n_helpers.py
medical_mvp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: loc.conf
scripts/: compile_translations.sh  generate_translations.sh
templates/errors/: 404.html  500.html
templates/includes/: language_switcher.html
templates/medical_analysis/: analysis_confirm.html  analysis_detail.html  base.html  compare.html  comparison_result.html  dashboard.html  home.html  login.html  profile.html  register.html  results.html  session_wait.html  sessions.html  subscription_contact.html  subscription_upgrade.html  trends.html  upload.html
(+11 files in other folders)
